--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "cross-env NODE_ENV=development webpack-dev-server",
-    "build": "cross-env NODE_ENV=production webpack"
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --config=webpack.dev.js",
+    "build": "cross-env NODE_ENV=production webpack --config=webpack.prod.js"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,7 @@
     "autoprefixer": "^9.7.4",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.1.1",
     "cross-env": "^7.0.2",
     "css-loader": "^3.4.2",
     "file-loader": "^6.0.0",
@@ -25,15 +26,20 @@
     "html-withimg-loader": "^0.1.16",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "mocker-api": "^1.13.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "style-loader": "^1.1.3",
     "url-loader": "^4.0.0",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.10.3",
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {
     "@babel/runtime": "^7.8.7",
-    "@babel/runtime-corejs3": "^7.8.7"
+    "@babel/runtime-corejs3": "^7.8.7",
+    "axios": "^0.19.2"
   }
 }
